fix bug - x overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
 body {
   background-color: #e8ffff;
+}
+
+html,body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
 }
 
